--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-scrollspy": "^3.3.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "vertical-timeline-component-for-react": "^1.0.7"
   },
   "keywords": [
     "gatsby"
