--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-phone-number": "^1.3.1",
     "react-scrollspy": "^3.3.5",
     "styled-components": "^4.1.3",
     "vertical-timeline-component-for-react": "^1.0.7"
@@ -35,7 +36,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",  
+    "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
     "start": "gatsby serve",
     "dev": "gatsby develop",
